# ghsudo

./: AGENTS-example.md  CLAUDE-example.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/ghsu/: __init__.py  __main__.py
src/ghsudo/: __init__.py  __main__.py
tests/: test_detection.py  test_version.py
